# robosub-2018

./: .gitignore  README.md  README.txt  _send_joystick_data_.py  ignore.gitignore  individualThrusterTest.py  testThrustersAuto.py
MechaVision/yolo_cpp/app/DetectTrackDistance/: .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  .CMakeLists.txt.swo  .main.cpp.swf  .main.cpp.swh  .main.cpp.swi  .main.cpp.swj  .main.cpp.swk  .main.cpp.swl  .main.cpp.swm  .main.cpp.swn  .main.cpp.swo  CMakeLists.txt  cmake_install.cmake  main.cpp  notes.txt
MechaVision/yolo_cpp/app/DetectTrackDistance/cmake/: DetectPython.cmake
MechaVision/yolo_cpp/app/DetectTrackDistance/dlib_build/: cmake_install.cmake
MechaVision/yolo_cpp/app/DetectTrackDistance/include/: .computerVisionComm.hpp.swn  .computerVisionComm.hpp.swo  .computerVisionComm.hpp.swp  .mechavision.hpp.swn  .mechavision.hpp.swo  .nnPythonInterface.hpp.swo  .nnPythonInterface.hpp.swp  computerVisionComm.hpp  mechavision.hpp  missionDecisions.hpp
MechaVision/yolo_cpp/app/DetectTrackDistance/src/: .client.py.swp  .computerVisionComm.cpp.swn  .computerVisionComm.cpp.swo  .computerVisionComm.cpp.swp  .mechavision.cpp.swh  .mechavision.cpp.swi  .mechavision.cpp.swj  .mechavision.cpp.swk  .mechavision.cpp.swl  .mechavision.cpp.swm  .mechavision.cpp.swn  .mechavision.cpp.swo  .mechavision.cpp.swp  .nnPythonInterface.cpp.swi  .nnPythonInterface.cpp.swj  .nnPythonInterface.cpp.swk  .nnPythonInterface.cpp.swl  .nnPythonInterface.cpp.swm  .nnPythonInterface.cpp.swn  .nnPythonInterface.cpp.swo  .nnPythonInterface.cpp.swp  .nnPythonInterface_ext.cpp.swp  .stereo_matching.cpp.swo  .stereo_matching.cpp.swp  client.py  computerVisionComm.cpp  demo.py  detector.py  matToNp.py  (+5 more)
(+222 files in other folders)
